--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
     "jquery": "^3.6.0",
     "laravel-mix": "^6.0.43",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
