Alimentação do Sistema

--- a/assets/mix-manifest.json
+++ b/assets/mix-manifest.json
@@ -1,6 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/admin.js": "/js/admin.js",
     "/css/app.css": "/css/app.css",
+    "/css/admin.css": "/css/admin.css",
     "/fonts/Acumin-BdItPro.woff": "/fonts/Acumin-BdItPro.woff",
     "/fonts/Acumin-BdPro.woff": "/fonts/Acumin-BdPro.woff",
     "/fonts/Acumin-ItPro.woff": "/fonts/Acumin-ItPro.woff",
